feat: completing server methods also fix: server updating itself etc